# llm-paper-reviewer

./: .env  .env.example  CHANGELOG.md  CLAUDE.md  README.md  README_ZH.md  paper_analyzer.py  pdf_parser.py  pyproject.toml
adapters/: __init__.py
adapters/ai/: __init__.py  ai_analysis_engine.py  base.py  deepseek_adapter.py  openai_adapter.py
adapters/parsers/: __init__.py  base.py  pdf_parser.py  registry.py  text_parser.py
core/: __init__.py  analyzer.py  exceptions.py
docs/: ARCHITECTURE.md
docs/api/: API_REFERENCE.md
docs/developer/: DEVELOPER_GUIDE.md
docs/user_guide/: USER_GUIDE.md
domain/: __init__.py
domain/models/: __init__.py  analysis.py  paper.py
infrastructure/: container.py
infrastructure/config/: __init__.py  settings.py
interfaces/cli/: __init__.py  commands.py  main.py
prompts/EN/: system_prompt.txt  user_prompt.txt
prompts/EN_2_0/: analysis_schema.json  system_prompt.txt  user_prompt.txt
prompts/ZH/: analysis_schema.json  system_prompt.txt  user_prompt.txt
prompts/ZH_2_0/: analysis_schema.json  system_prompt.txt  user_prompt.txt
